src/objects/SPE_TrackerRespondent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPE Tracker Respondents</relationshipLabel>
        <relationshipName>SPE_TrackerRespondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateofExecution__c</fullName>
        <formula>SPE_Tracker__r.DateOfExecution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForceSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponseReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Response Received ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSurveyEmailReceivedDate__c</fullName>
        <label>Last Survey Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPE_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>SPE Tracker Respondents</relationshipLabel>
        <relationshipName>SPE_Tracker_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>SPE Tracker Respondents</relationshipLabel>
        <relationshipName>SPE_Tracker_Respondents_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <formula>SPE_Tracker__r.SurveyReminderBeforeExecutionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Reminder Before Execution (InDay)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyRespondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Respondent</label>
        <referenceTo>SPE_Respondent__c</referenceTo>
        <relationshipLabel>SPE Tracker Respondents</relationshipLabel>
        <relationshipName>SPE_Tracker_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackerExecution__c</fullName>
        <formula>MID(TEXT( DateofExecution__c ), 9, 2) &amp;&quot;-&quot;&amp; 
CASE(MID(TEXT(DateofExecution__c ), 6, 2), 
&quot;01&quot;, &quot;JAN&quot;, 
&quot;02&quot;, &quot;FEB&quot;, 
&quot;03&quot;, &quot;MAR&quot;, 
&quot;04&quot;, &quot;APR&quot;, 
&quot;05&quot;, &quot;MAY&quot;, 
&quot;06&quot;, &quot;JUN&quot;, 
&quot;07&quot;, &quot;JUL&quot;, 
&quot;08&quot;, &quot;AUG&quot;, 
&quot;09&quot;, &quot;SEP&quot;, 
&quot;10&quot;, &quot;OCT&quot;, 
&quot;11&quot;, &quot;NOV&quot;, 
&quot;12&quot;, &quot;DEC&quot;, 
&quot;Error&quot;) &amp;&quot;-&quot;&amp; 
MID(TEXT( DateofExecution__c ), 3, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracker Execution</label>
        <type>Text</type>
    </fields>
    <label>SPE Tracker Respondent</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>SPE Tracker Respon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Tracker Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>